new design for prompt, updated icons, added animations for different states

--- a/scripts/components/Dialog/PasswordContent.scss
+++ b/scripts/components/Dialog/PasswordContent.scss
@@ -6,37 +6,64 @@
   flex-direction: column;
   align-items: center;
   max-width: 90%;
-  paddin: 2em;
+  margin: 1em auto;
 
   .h5p-password-icon-wrapper {
     background-color: $activeBorder;
-    height: 100px;
-    width: 100px;
+    height: 72px;
+    width: 72px;
     display: flex;
     border-radius: 50%;
+    transition: background-color .5s ease-in-out;
+    &--wrong-code {
+      background-color: #a28a59;
+    }
+    &--correct-code {
+      background-color: #528c52;
+    }
 
     .h5p-password-icon {
-      font-size: 4em;
+      font-size: 3em;
       color: white;
       font-family: "360-image";
-    margin: auto;
-    }
-    .h5p-password-icon-lock {
-      &:before {
-        content: $lock-icon;
-      }
-    }
-    .h5p-password-icon-unlock {
+      margin: auto;
+      position: relative;
       &:before {
         content: $unlock-icon;
       }
-    }
+      &:after {
+        position: absolute;
+        content: "";
+        transition: top .2s ease-in-out;
+        width: 5px;
+        top: 0;
+        height: 13px;
+        right: 11px;
+        background-color: white;
 
+      }
+      &--shake {
+        animation: shake 0.5s;
+      }
+    }
+    .locked {
+      &:after {
+        top: 0;
+      }
+    }
+    .unlocked {
+      animation: dipDown 0.3s;
+
+      &:after {
+        top: 13px;
+      }
+    }
   }
 
-  .h5p-label-wrapper {
+  .h5p-wrapper {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   .h5p-field-description {
     display: block;
@@ -47,29 +74,74 @@
   }
   .h5p-field-text {
     font-size: 12px;
-    margin-top: 0.3em;
-    margin-bottom: 1em;
     font-weight: 500;
     color: #434446;
     line-height: 15px;
     letter-spacing: 0.5px;
+    max-width: 70%;
+    margin: 0.5em auto;
   }
 
   .h5p-field-input {
-    margin: 0;
     padding: 10px;
-    min-height: 40px;
-    border: 1px solid #d0d0d1;
+    /*border: 1px solid    #d0d0d1;*/
+    border: 1px solid #7a7a7a;
     background: #fff;
     outline: none;
-    font-size: 16px;
+    font-size: 1em;
     word-wrap: break-word;
+    margin: 0.5em auto;
+    font-weight: bold;
+    border-radius: 2px;
   }
   .h5p-password-btn {
     background-color: $interactionBg;
-    height: $buttonSize;
     color: $labelColor;
-    border: 0;
+    position: relative;
+    padding: 0.5em 2em;
+    line-height: 1;
+    border: none;
     border-radius: 2px;
+    cursor: pointer;
+    font-size: 1em;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 1;
+    box-shadow: 0.2em 0.2em 0.3em rgba(0,0,0,0.2);
+    transition: border 100ms linear;
+    margin-bottom: .5em;
+    &:hover {
+      background: $interactionHoverBg;
+    }
+    &:active {
+      background: $activeBg;
+    }
+  }
+
+  .show-btn {
+    padding: 0.5em;
+    font-size: .75em;
+    margin-left: .25em;
+  }
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+  @keyframes dipDown {
+    0% { transform: translate(0, 0);}
+    50% { transform: translate(0, 5px);}
+    100% { transform: translate(0, 0);}
+
   }
 }
