--- a/scripts/components/Dialog/PasswordContent.scss
+++ b/scripts/components/Dialog/PasswordContent.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   max-width: 90%;
-  margin: 1em auto;
+  margin: 0.5em auto 0 auto;
 
   .h5p-password-icon-wrapper {
     background-color: $activeBorder;
@@ -64,6 +64,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    &-inner {
+      display: flex;
+      margin: 0.5em auto;
+
+      .h5p-password-show-btn {
+        padding: 0.5em;
+        font-size: .75em;
+        max-width: 4em;
+        margin: 0 0 0 .25em;
+      }
+    }
   }
   .h5p-field-description {
     display: block;
@@ -90,7 +101,6 @@
     outline: none;
     font-size: 1em;
     word-wrap: break-word;
-    margin: 0.5em auto;
     font-weight: bold;
     border-radius: 2px;
   }
@@ -111,19 +121,13 @@
     z-index: 1;
     box-shadow: 0.2em 0.2em 0.3em rgba(0,0,0,0.2);
     transition: border 100ms linear;
-    margin-bottom: .5em;
+    margin: 0.5em auto;
     &:hover {
       background: $interactionHoverBg;
     }
     &:active {
       background: $activeBg;
     }
-  }
-
-  .show-btn {
-    padding: 0.5em;
-    font-size: .75em;
-    margin-left: .25em;
   }
   @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
