--- a/scripts/components/Dialog/PasswordContent.scss
+++ b/scripts/components/Dialog/PasswordContent.scss
@@ -71,8 +71,21 @@
       .h5p-password-show-btn {
         padding: 0.5em;
         font-size: .75em;
-        max-width: 4em;
-        margin: 0 0 0 .25em;
+        min-width: 7em;
+        
+        max-width: 8em;
+        margin: 0 auto 0 .25em;
+        font-weight: bold;
+        &:hover {
+          color: $labelColor;
+        }
+        &-is-shown {
+          border: 1px solid $interactionBg;
+          background-color: rgba(0,0,0,0);
+          color: $interactionBg;
+          font-weight: bold;
+          transition: all .15s;
+        }
       }
     }
   }
