--- a/scripts/components/Shared/NavigationButton.scss
+++ b/scripts/components/Shared/NavigationButton.scss
@@ -70,41 +70,55 @@ $labelWidth: 9em;
   &:hover .nav-button {
     background-color: $interactionHoverBg;
   }
-  .nav-button-active-field-wrapper {
-
-    .nav-button-active-field {
-      background-color: rgba(0,0,0,0);
-      transition: background-color 0.2s ease-in-out;
-      border-radius: 0;
-      box-shadow: none;
+}
+.nav-button-active-field-wrapper {
+  position: relative;
+  z-index: -1;
+  .nav-button-active-field {
+    background-color: rgba(0,0,0,0);
+    transition: background-color 0.2s ease-in-out;
+    border-radius: 0;
+    box-shadow: none;
+    &:before {
+      display: none;
+    }
+    &--editor {
+      background-color: #1d5cff;
+      opacity: .75;
       &:before {
-        display: none;
-      }
-      &--editor {
-        background-color: #1d5cff;
-        opacity: .75;
-        &:before {
-          display: inherit;
-          opacity: 1;
-        }
-      }
-      &:hover {
-        background-color: #1d5cff;
-        opacity: .75;
-      }
-
-      &:active {
-        border: 0.25em solid $activeBorder;
+        display: inherit;
+        opacity: 1;
       }
     }
-    .drag {
-      width: 1.5em;
-      height: 1.5em;
-      background-color: white;
+    &:hover {
+      background-color: #1d5cff;
+      opacity: .75;
     }
 
-
+    &:active {
+      border: 0.25em solid $activeBorder;
+    }
   }
+  .drag {
+    width: 1.5em;
+    height: 1.5em;
+    background-color: white;
+    border: 0;
+    position: absolute;
+    cursor: pointer;
+    z-index: 1;
+    border-radius: 2px;
+    &--horizontal {
+      left: calc(100% - 0.75em);
+      top: calc(50% - 0.75em);
+    }
+    &--vertical {
+      bottom: - 0.75em;
+      left: calc(50% - 0.75em);
+    }
+  }
+
+
 }
 
 .disabled .nav-button {
