--- a/scripts/styles/icons.scss
+++ b/scripts/styles/icons.scss
@@ -17,6 +17,8 @@ $image: "\e919";
 $info-mark: "\e91a";
 $lock-icon: "\e91b";
 $unlock-icon: "\e91c";
+$arrow-horiz-scale: "\e91d";
+$arrow-verti-scale: "\e91e";
 
 $edit: "\e90f";
 $delete: "\e910";
