--- a/scripts/styles/colors.scss
+++ b/scripts/styles/colors.scss
@@ -17,3 +17,7 @@ $activeBorder: #6d6d6d;
 
 $interactionActiveBg: #1b1f4a;
 $interactionActiveBorder: #8587d4;
+
+//Hotspots
+$hotspotEditor: rgba(52, 96, 255, 0.75);
+$hotspotAlteredState: rgba(52, 96, 255, 0.5);
