added hint prefix text to hint text field, changes some margin and font values from px to em in scss

--- a/scripts/components/Dialog/PasswordContent.scss
+++ b/scripts/components/Dialog/PasswordContent.scss
@@ -72,7 +72,7 @@
         padding: 0.5em;
         font-size: .75em;
         min-width: 7em;
-        
+
         max-width: 8em;
         margin: 0 auto 0 .25em;
         font-weight: bold;
@@ -91,24 +91,22 @@
   }
   .h5p-field-description {
     display: block;
-    margin-bottom: 6px;
+    margin-bottom: .5em;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 1em;
     color: #454347;
   }
   .h5p-field-text {
-    font-size: 12px;
+    font-size: 1em;
     font-weight: 500;
     color: #434446;
-    line-height: 15px;
-    letter-spacing: 0.5px;
+    line-height: 1em;
     max-width: 70%;
     margin: 0.5em auto;
   }
 
   .h5p-field-input {
-    padding: 10px;
-    /*border: 1px solid    #d0d0d1;*/
+    padding: .5em;
     border: 1px solid #7a7a7a;
     background: #fff;
     outline: none;
