--- a/scripts/components/Interactions/NavigationButton.scss
+++ b/scripts/components/Interactions/NavigationButton.scss
@@ -1,5 +1,5 @@
-@import '../../styles/icons';
-@import '../../styles/colors';
+@import "../../styles/icons";
+@import "../../styles/colors";
 
 $labelPadding: 0.5em;
 $labelWidth: 9em;
@@ -35,7 +35,7 @@ $labelWidth: 9em;
   -ms-user-select: none;
   user-select: none;
   z-index: 1;
-  box-shadow: 0.2em 0.2em 0.3em rgba(0,0,0,0.2);
+  box-shadow: 0.2em 0.2em 0.3em rgba(0, 0, 0, 0.2);
   transition: border 100ms linear;
 
   &:hover {
@@ -53,7 +53,8 @@ $labelWidth: 9em;
     z-index: 3;
   }
 
-  &.dragging, &.focused {
+  &.dragging,
+  &.focused {
     z-index: 3;
   }
 }
@@ -78,7 +79,7 @@ $labelWidth: 9em;
     z-index: 3;
   }
   .nav-button-hotspot {
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0, 0, 0, 0);
     transition: background-color 0.2s ease-in-out;
     border-radius: 0;
     box-shadow: none;
@@ -90,7 +91,7 @@ $labelWidth: 9em;
     }
     /*Modifiers*/
     &--show-hotspot-on-hover {
-      background-color: rgba(0,0,0,0);
+      background-color: rgba(0, 0, 0, 0);
 
       &:focus {
         background-color: $hotspotAlteredState;
@@ -107,12 +108,12 @@ $labelWidth: 9em;
         display: inherit;
         font-size: 2.5em;
       }
-      &:hover, &:focus, &:active {
+      &:hover,
+      &:focus,
+      &:active {
         background-color: $hotspotAlteredState;
       }
     }
-
-
   }
   .drag {
     width: 3em;
@@ -138,21 +139,18 @@ $labelWidth: 9em;
       }
     }
     &--vertical {
-      bottom: - 0.75em;
+      bottom: -0.75em;
       left: calc(50% - 0.75em);
       &:before {
         content: $arrow-verti-scale;
       }
     }
   }
-
-
 }
 
 .disabled .nav-button {
   opacity: 0.5;
 }
-
 
 .bottom .nav-button {
   top: auto;
@@ -238,8 +236,28 @@ $labelWidth: 9em;
   content: $sceneDescription;
 }
 
+/**
+ * {1} The z-index needs to be greater than the z-index of the `.nav-button`
+ */
 .h5p-interaction-answered {
-  .nav-button {
-    box-shadow: 0 0 0 4px hsl(128, 64%, 40%);
+  &::before {
+    $badge-size: 1.5em;
+
+    background-color: lighten($interactionBg, 12.5%);
+    border-radius: 50%;
+    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
+    color: #fff;
+    content: $checkmark;
+    font-size: 0.75rem;
+    font-weight: 600;
+    height: $badge-size;
+    line-height: $badge-size;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 0;
+    transform: translateX(20%) translateY(-20%);
+    width: $badge-size;
+    z-index: 2; /* {1} */
   }
 }
