--- a/scripts/components/Interactions/NavigationButton.scss
+++ b/scripts/components/Interactions/NavigationButton.scss
@@ -116,7 +116,7 @@ $labelWidth: 9em;
     width: 3em;
     height: 3em;
     padding: 0;
-    background-color: white;
+    background-color: $dragBg;
     border: 0;
     position: absolute;
     cursor: pointer;
@@ -125,7 +125,7 @@ $labelWidth: 9em;
     &:before {
       font-family: "360-image";
       vertical-align: middle;
-      color: $activeBorder;
+      color: $dragIcon;
       font-size: 2em;
     }
     &--horizontal {
