--- a/scripts/components/Interactions/OpenContent.scss
+++ b/scripts/components/Interactions/OpenContent.scss
@@ -51,7 +51,7 @@ $labelWidth: 9em;
       width: 1.5em;
       height: 1.5em;
       padding: 0;
-      background-color: #cbcbcb;
+      background-color: $dragBg;
       border: 0;
       position: absolute;
       cursor: pointer;
@@ -60,7 +60,7 @@ $labelWidth: 9em;
       &:before {
         font-family: "360-image";
         vertical-align: middle;
-        color: $hoverBg;
+        color: $dragIcon;
       }
       &--horizontal {
         left: calc(100% - 0.75em);
