--- a/scripts/components/Interactions/OpenContent.scss
+++ b/scripts/components/Interactions/OpenContent.scss
@@ -64,8 +64,9 @@ $labelWidth: 9em;
         font-size: 1.25em;
       }
       &--horizontal {
-        left: calc(100% - 1em);
-        top: calc(50% - 1em);
+        right: 0;
+        transform: translateX(50%) translateY(-50%);
+        top: 50%;
         &:before {
           content: $arrow-horiz-scale;
         }
@@ -81,7 +82,6 @@ $labelWidth: 9em;
     }
   }
 }
-
 
 
 
