Update H5P sync branch with newest features (#55)
– Global playlist
– Score component
– Remove Storybook
– Remove GH Workflow
– Fix password bugs
– Fix backwards compatibility

Co-authored-by: Kent Inge F. Simonsen <kent.simonsen@tietoevry.com>
Co-authored-by: Sindre Bøyum <boyum@users.noreply.github.com>
Co-authored-by: Sindre Bøyum <sindre.boyum@gmail.com>
Co-authored-by: Henriette Moe <35261194+henriettemoe@users.noreply.github.com>
Co-authored-by: Henriette Rudi Moe <henriette.moe@evry.com>
Co-authored-by: Kent Inge F. Simonsen <40064+kentis@users.noreply.github.com>
Co-authored-by: EivinS <71434505+EivinS@users.noreply.github.com>

--- a/scripts/components/Dialog/Dialog.scss
+++ b/scripts/components/Dialog/Dialog.scss
@@ -29,7 +29,6 @@
   left: 50%;
   top: 50%;
   width: 80%;
-  max-width: 93%;
   max-height: 90%;
   background: white;
   z-index: 1;
@@ -67,10 +66,17 @@
     content: $close;
     vertical-align: text-bottom;
   }
+
+  /**
+   * {1} About 50 characters (500px)
+   */
+  &.h5p-advancedtext {
+    max-width: 31.25em; /* {1} */
+  }
 }
 .h5p-medium-tablet-size .h5p-text-dialog {
   width: 86%;
-  margin: 0em;
+  margin: 0;
   padding: 0.25em;
 }
 .h5p-text-content {
@@ -78,6 +84,7 @@
   max-height: 100%;
   max-width: 100%;
   overflow-y: auto;
+  padding: 0 1em;
 }
 .h5p-text-content::-webkit-scrollbar {
   width: 0.5em;
