--- a/scripts/components/Dialog/PasswordContent.scss
+++ b/scripts/components/Dialog/PasswordContent.scss
@@ -16,10 +16,10 @@
     border-radius: 50%;
     transition: background-color .5s ease-in-out;
     &--wrong-code {
-      background-color: #a28a59;
+      background-color: #bf3c3c;
     }
     &--correct-code {
-      background-color: #528c52;
+      background-color: #3e803e;
     }
 
     .h5p-password-icon {
@@ -95,6 +95,12 @@
     font-weight: 600;
     font-size: 1em;
     color: #454347;
+    &--wrong-code {
+      color: #bf3c3c;
+    }
+    &--correct-code {
+      color: #3e803e;
+    }
   }
   .h5p-field-text {
     font-size: 1em;
@@ -103,6 +109,21 @@
     line-height: 1em;
     max-width: 70%;
     margin: 0.5em auto;
+
+    .h5p-password-hint-label {
+      font-weight: 600;
+    }
+
+    .h5p-password-hint {
+      display: inline;
+
+      /**
+       * The div produced by the WYSIWYG editor
+       */
+      > div {
+        display: inline;
+      }
+    }
   }
 
   .h5p-field-input {
