decrease hotspot icon size when the hotspot is scaled down

--- a/scripts/components/Interactions/NavigationButton.scss
+++ b/scripts/components/Interactions/NavigationButton.scss
@@ -101,10 +101,12 @@ $labelWidth: 9em;
 
     &--editor {
       background-color: $hotspotEditor;
-      &:before {
+
+      &::before {
         display: inherit;
-        font-size: 2.5em;
+        font-size: 1em;
       }
+
       &:hover,
       &:focus,
       &:active {
