Removed progress indicator on tasks with hotspot

--- a/scripts/components/Interactions/NavigationButton.scss
+++ b/scripts/components/Interactions/NavigationButton.scss
@@ -254,7 +254,7 @@ $answerable-interactions: (
 );
 
 @each $interaction in $answerable-interactions {
-  .#{$interaction} {
+  .#{$interaction}:not(.nav-btn-hotspot) {
     &::before {
       $offset: 0.5rem;
       border: 3px dashed $interactionBg;
