Fix build chain

--- a/scripts/components/HUD/Buttons/Button/Button.scss
+++ b/scripts/components/HUD/Buttons/Button/Button.scss
@@ -83,7 +83,7 @@
   }
   &.submit-dialog:before {
     content: " ";
-    background-image: url('../../../../../assets/the-h5p-star.svg');
+    background-image: url('../../../../assets/images/the-h5p-star.svg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 1em;
