--- a/scripts/components/Main.scss
+++ b/scripts/components/Main.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: '360-image';
-  src:  url('../assets/360-image.eot?nghxo3');
-  src:  url('../assets/360-image.eot?nghxo3#iefix') format('embedded-opentype'),
-  url('../assets/360-image.ttf?nghxo3') format('truetype'),
-  url('../assets/360-image.woff?nghxo3') format('woff'),
-  url('../assets/360-image.svg?nghxo3#360-image') format('svg');
+  src:  url('../assets/fonts/360-image.eot?nghxo3');
+  src:  url('../assets/fonts/360-image.eot?nghxo3#iefix') format('embedded-opentype'),
+  url('../assets/fonts/360-image.ttf?nghxo3') format('truetype'),
+  url('../assets/fonts/360-image.woff?nghxo3') format('woff'),
+  url('../assets/fonts/360-image.svg?nghxo3#360-image') format('svg');
   font-weight: normal;
   font-style: normal;
 }
