--- a/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
+++ b/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
@@ -11,7 +11,7 @@
     width: 9em;
     height: 9em;
 
-    background: url('../../../assets/moving-icon.svg');
+    background: url('../../../assets/images/moving-icon.svg');
     background-size: 100% 100%;
     font-size: 0.5em;
   }
